# proj

./: .cursorrules  .gitignore  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  rms.py  sonar-project.properties
.cursor/rules/: architecture.md  testing_strategy.md
.github/workflows/: ci-pipeline.yml
docs/diagrams/: class_diagram.md  domain_model.md  use_case.md
src/: __init__.py
src/cli/: __init__.py  __main__.py  repl.py
src/models/: __init__.py  booking.py  check_in.py  contract.py  enums.py  invoice.py  notification.py  payment.py  space.py  tenant.py
src/services/: __init__.py  booking_service.py  check_in_service.py  contract_service.py  invoice_factory.py  invoice_service.py  notification_service.py  payment_service.py  penalty_strategy.py  space_service.py  tenant_service.py
src/storage/: __init__.py  base_repository.py  booking_repository.py  check_in_repository.py  contract_repository.py  interfaces.py  invoice_repository.py  payment_repository.py  space_repository.py  tenant_repository.py
src/utils/: __init__.py  date_helpers.py  exceptions.py  id_generator.py  validators.py
tests/: conftest.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: test_workflows.py
tests/unit/cli/: test_cli.py
tests/unit/models/: test_contract.py  test_other_models.py  test_space.py  test_tenant.py
tests/unit/patterns/: __init__.py  test_factory_and_observer.py  test_penalty_strategy.py
tests/unit/services/: test_booking_service.py  test_checkin_invoice_payment.py  test_contract_service.py  test_space_service.py  (+1 more)
(+3 files in other folders)
